<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Icone de conta do usuário -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:src="@drawable/baseline_account_circle_24"
            android:contentDescription="@string/account_icon" />

        <!-- Titulo da tela -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <!-- Campo para o nome de usuário -->
        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:importantForAccessibility="yes" />

        <!-- Campo para a senha -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:importantForAccessibility="yes" />

        <!-- Link para recuperação de senha -->
        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:onClick="onForgotPasswordClick"
            tools:ignore="OnClick"
            android:importantForAccessibility="yes" />

        <!-- Botão de login -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:onClick="realizarLogin"
            tools:ignore="OnClick" />

    </LinearLayout>

    <!-- Link para cadastro -->
    <TextView
        android:id="@+id/text_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_marginTop="20dp"
        android:text="@string/not_registered"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!-- Link de redirecionamento para cadastro -->
    <TextView
        android:id="@+id/text_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_cadastro"
        android:layout_marginTop="9dp"
        android:onClick="openCadastro"
        android:text="@string/click_here"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- LinearLayout com ícones de login social -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Icone de login com Facebook -->
        <ImageView
            android:id="@+id/face_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:onClick="openFacebook"
            tools:ignore="OnClick"
            android:src="@drawable/face_"
            android:contentDescription="@string/facebook_icon" />

        <!-- Icone de login com Google -->
        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="64dp"
            android:layout_height="35dp"
            android:onClick="openGoogle"
            tools:ignore="OnClick"
            android:src="@drawable/google_plus"
            android:contentDescription="@string/google_icon" />
    </LinearLayout>

</RelativeLayout>
